Save results on server instead of download prompt

--- a/index.template.html
+++ b/index.template.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <!--vue-ssr-outlet-->
+    <div class="loading">
+      <img alt="loading" src="img/loading.gif">
+    </div>
 
     <script src="js/build/affdex.js"></script>
     <script src="js/build/main.js"></script>
